tests/sksl/errors/BooleanArithmetic.dsl.glsl
### Compilation failed:

error: type mismatch: '+' cannot operate on 'bool', 'bool'

error: expected function to return 'bool2'

error: type mismatch: '-' cannot operate on 'bool', 'bool'

error: expected function to return 'bool2'

error: type mismatch: '*' cannot operate on 'bool', 'bool'

error: expected function to return 'bool2'

error: type mismatch: '/' cannot operate on 'bool', 'bool'

error: expected function to return 'bool2'

error: type mismatch: '%' cannot operate on 'bool', 'bool'

error: expected function to return 'bool2'

error: type mismatch: '<<' cannot operate on 'bool', 'bool'

error: expected function to return 'bool2'

error: type mismatch: '>>' cannot operate on 'bool', 'bool'

error: expected function to return 'bool2'

error: '-' cannot operate on 'bool'

error: expected function to return 'bool2'

error: '~' cannot operate on 'bool'

error: expected function to return 'bool2'

error: type mismatch: '&' cannot operate on 'bool', 'bool'

error: expected function to return 'bool2'

error: type mismatch: '|' cannot operate on 'bool', 'bool'

error: expected function to return 'bool2'

error: type mismatch: '^' cannot operate on 'bool', 'bool'

error: expected function to return 'bool2'

error: type mismatch: '+' cannot operate on 'bool2', 'bool2'

error: expected function to return 'bool2'

error: type mismatch: '-' cannot operate on 'bool2', 'bool2'

error: expected function to return 'bool2'

error: type mismatch: '*' cannot operate on 'bool2', 'bool2'

error: expected function to return 'bool2'

error: type mismatch: '/' cannot operate on 'bool2', 'bool2'

error: expected function to return 'bool2'

error: type mismatch: '%' cannot operate on 'bool2', 'bool2'

error: expected function to return 'bool2'

error: type mismatch: '<<' cannot operate on 'bool2', 'bool2'

error: expected function to return 'bool2'

error: type mismatch: '>>' cannot operate on 'bool2', 'bool2'

error: expected function to return 'bool2'

error: '!' cannot operate on 'bool2'

error: expected function to return 'bool2'

error: '-' cannot operate on 'bool2'

error: expected function to return 'bool2'

error: '~' cannot operate on 'bool2'

error: expected function to return 'bool2'

error: type mismatch: '&' cannot operate on 'bool2', 'bool2'

error: expected function to return 'bool2'

error: type mismatch: '|' cannot operate on 'bool2', 'bool2'

error: expected function to return 'bool2'

error: type mismatch: '^' cannot operate on 'bool2', 'bool2'

error: expected function to return 'bool2'

50 errors
